--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
           <div class="jl_div1c2">
              <div class="jl_div1c2_a">
                <dl>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
                  <a href="#"><dt ><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_13.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_22.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
-                 <a href="#"><dt><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_13.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_22.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
+                 <a href="#"><dt onMouseOver="bianse(this);" onMouseOut="bianse1(this);"><img src="images/tubiao_10.jpg"/></dt></a>
                </dl>           
              </div>
              
