--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE"> 
 <title>精彩生活网</title>
+<link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/index.css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jq1.7.1.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/js.js"></script>
+<script type="text/javascript" src="js/tlife.js"></script>
 </head>
 
 <body>
@@ -18,7 +21,7 @@
     <ul class="fl lh">
       <li class="fore1 ld">
         <b></b>
-        <a href="javascript:addToFavorite()" rel="nofollow">收藏精彩生活馆</a>
+        <a href="javascript:addToFavortie()" rel="nofollow">收藏精彩生活馆</a>
       </li>
     </ul>
 	<script type="text/javascript">
@@ -31,8 +34,8 @@
     <dl id="home-area">
       <dt>
         <b></b>
-        <strong>成都市</strong>
-        <a href="javascript:;">&gt;金牛区</a>
+        <span>成都市&nbsp;&gt;</span>
+        <a href="javascript:;">金牛区</a>
         <span class="blank"></span>
       </dt>
       <dd class="dd">
@@ -65,7 +68,7 @@
      <li class="fore1" id="loginbar">亲，欢迎来精彩生活馆！<span><a href="javascript:login();">[请登录]</a><a href="javascript:regist();" class="link-regist">[免费注册]</a></span></li>
      <li class="fore2 ld">
 	   <s></s>
-       <a class="menu-hd" href="#" target="_top" rel="nofollow" tabindex="0">我的账户<b></b></a>
+       <a class="menu-hd" href="#" target="_top" rel="nofollow" tabindex="0"><img src="images/header3.png"/>我的账户<b></b></a>
         <div class="menu-bd-panel" id="myTaobaoPanel">
           <!--<ul>
            <li><a href="#" data-ref="LIFE_TOP_order" target="_blank">我的订单</a></li>
@@ -80,7 +83,7 @@
 	 <li class="sn-cart mini-cart menu"><i class="mui-global-iconfont">󰅈</i>
 <a class="sn-cart-link" href="#" target="_top" rel="nofollow" id="mc-menu-hd">购物车<span class="mc-count mc-pt3">0</span>件<iframe id="tmp_downloadhelper_iframe" style="display: none;"></iframe></a>
 </li>
-     <li class="fore2 ld"><s></s><a href="#"><u>招商加盟</u></a></li>
+     <li class="fore2 ld"><s></s><a href="#">招商加盟</a></li>
 	 <li class="fore2 ld">
 	   <s></s>
 	   <i class="mui-global-iconfont"></i>
@@ -96,18 +99,7 @@
 <div id="header">
    <div class="headerLayout">
      <div class="headerCon">
-		<div id="lifeLogo">
-          <a href="#">
-		   <img src="images/logo1.png" width="295" height="109">
-          </a>
-		</div>
         <div class="header-extra">
-          <div class="header-banner">
-            <div id="J_FpEventBanner" class="fp-event-banner  hidden" style="display: block;">
-               <a href="#">
-               <img class="j_EventBannerPic event-banner-pic" src="images/logo2.png" width="190" height="109" alt=""></a>
-            </div>
-          </div>
           <div id="lifeSearch" class="life-search">
             <form class="lifeSearch-form" name="searchTop" action="http://list.tmall.com/search_product.htm" target="_top" accept-charset="gbk">
               <fieldset>
@@ -141,6 +133,17 @@
 			  <li class="hot-query-highlight"><a href="#">进口零食</a></li>
 			</ul>
 		  </div>
+		  <div class="header-banner">
+            <div id="J_FpEventBanner" class="fp-event-banner  hidden" style="display: block;">
+               <a href="#">
+               <img class="j_EventBannerPic event-banner-pic" src="images/logo2.png" width="190" height="109" alt=""></a>
+            </div>
+          </div>
+		</div>
+		<div id="lifeLogo">
+          <a href="#">
+		   <img src="images/logo1.png" width="295" height="109">
+          </a>
 		</div>
      </div>
    </div>
