--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=EDGE"> 
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>精彩生活网</title>
 <link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -31,7 +35,7 @@
 	  });
 	});
 	</script>
-    <dl id="home-area">
+    <!--<dl id="home-area">
       <dt>
         <b></b>
         <span>成都市&nbsp;&gt;</span>
@@ -77,7 +81,7 @@
            <li><a href="#" data-ref="LIFE_TOP_mycollection" target="_blank">我的收藏夹</a></li>
            <li><a href="#" data-ref="LIFE_TOP_comment" target="_blank">评价商品</a></li>
            <li><a href="#" data-ref="LIFE_TOP_vip" target="_blank">会员专享</a></li>
-          </ul>-->
+          </ul>
         </div>
 	 </li>
 	 <li class="sn-cart mini-cart menu"><i class="mui-global-iconfont">󰅈</i>
@@ -92,33 +96,33 @@
 	   <iframe id="tmp_downloadhelper_iframe" style="display: none;"></iframe>
 	 </li>
      <li class="fore2 ld"><s></s><a href="#">网站导航</a></li>
-    </ul>
+    </ul>-->
   </div>
 </div>
 <!-----------------------------------------------Header------------------------------------------------->
 <div id="header">
    <div class="headerLayout">
      <div class="headerCon">
+        <div id="lifeLogo">
+          <a href="#"><img src="images/logo1.gif" width="295" height="109"/></a>
+        </div>
         <div class="header-extra">
+          <div class="header-banner">
+            <a href="#"><img src="images/logo2.png" width="190" height="109" alt=""/></a>
+          </div>
           <div id="lifeSearch" class="life-search">
-            <form class="lifeSearch-form" name="searchTop" action="http://list.tmall.com/search_product.htm" target="_top" accept-charset="gbk">
+            <form class="lifeSearch-form" name="searchTop" action="#" target="_top" accept-charset="uft-8">
               <fieldset>
                 <legend>精彩生活搜索</legend>
                 <div class="lifeSearch-input clearfix">
-                  <label for="mq" style="visibility: visible; display: none;">搜索 生活 商品/品牌/店铺</label>
+                  <label for="mq" style="visibility: visible; display: none;">搜索 生活 商品/品牌</label>
                   <div class="s-combobox" id="s-combobox-226">
                     <div class="s-combobox-input-wrap">
-                       <input type="text" name="q" id="mq" tabindex="9" accesskey="s" autocomplete="off" autofocus="true" x-webkit-speech="" x-webkit-grammar="builtin:translate" class="s-combobox-input" role="combobox" aria-haspopup="true" title="请输入搜索文字" aria-label="请输入搜索文字">
+                       <input type="text" name="q" id="mq" tabindex="9" accesskey="s" autocomplete="off" autofocus="true" x-webkit-speech="" x-webkit-grammar="builtin:translate" class="s-combobox-input" role="combobox"                        aria-haspopup="true" title="请输入搜索文字" aria-label="请输入搜索文字">
                     </div>
                     <label for="mq" class="s-combobox-placeholder" style="color: rgb(102, 102, 102); visibility: visible;">Iphone 6 plus</label>
 				  </div>
-                  <button type="submit"><img src="images/sou.png" width="32" height="32"></button>
-                  <input type="hidden" name="user_action" value="initiative">
-                  <input type="hidden" name="at_topsearch" value="1">
-                  <input type="hidden" name="sort" value="st">
-                  <input id="J_Type" type="hidden" name="type" value="p">
-                  <input id="J_Cat" type="hidden" name="cat" value="all">
-                  <input type="hidden" name="vmarket" value="">
+                  <button type="submit"><img src="images/sou.png" width="32" height="44"></button>
                 </div>
               </fieldset>
             </form>
@@ -133,17 +137,6 @@
 			  <li class="hot-query-highlight"><a href="#">进口零食</a></li>
 			</ul>
 		  </div>
-		  <div class="header-banner">
-            <div id="J_FpEventBanner" class="fp-event-banner  hidden" style="display: block;">
-               <a href="#">
-               <img class="j_EventBannerPic event-banner-pic" src="images/logo2.png" width="190" height="109" alt=""></a>
-            </div>
-          </div>
-		</div>
-		<div id="lifeLogo">
-          <a href="#">
-		   <img src="images/logo1.png" width="295" height="109">
-          </a>
 		</div>
      </div>
    </div>
