--- a/2_cloth.html
+++ b/2_cloth.html
@@ -105,6 +105,190 @@
 </div>
 
 
+<!-----------------------精品男装---------------------->
+<div class="jl2_divfu1fff">
+   <div class="jl2_divfu1_1f">
+      <dl>
+        <dt class="jl2_divfu1_1dt1">精品男装</dt>
+        <dt class="jl2_divfu1_1dt2">MEN WEAR</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">针织衫</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">西服 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">夹克 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">皮衣 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">牛仔裤 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">棉服 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">羽绒服 |</dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ff">
+      <dl>
+         <a href="#"><dt class="jl_jpdt1"><img src="images/men1jpg_03.jpg"/></dt></a>
+         <a href="#"><dt class="jl_jpdt1"><img src="images/men1jpg_05.jpg"/></dt></a>
+         <a href="#"><dt class="jl_jpdt2"><img src="images/men1jpg_07.jpg"/></dt></a>
+         <a href="#"><dt class="jl_jpdt2"><img src="images/men1jpg_12.jpg"/></dt></a>
+         <a href="#"><dt class="jl_jpdt3"><img src="images/men1jpg_14.jpg"/></dt></a>
+         <a href="#"><dt class="jl_jpdt3"><img src="images/men1jpg_16.jpg"/></dt></a>
+      </dl>
+   </div> 
+   <a href="#"><div class="jl_fudiv2"><img src="images/men2_03.jpg"/></div></a> 
+</div>
+<!-----------------------运动户外---------------------->
+<div class="jl2_divfu1fffh">
+   <div class="jl2_divfu1_1f">
+      <dl>
+        <dt class="jl2_divfu1_1dt1">运动户外</dt>
+        <dt class="jl2_divfu1_1dt2">SPORTS OUTDOORS</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">品牌</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">冬季运动 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">运动鞋 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">登山鞋 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">冬季户外 |</dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ffh">
+      <div class="jl_divhu1">
+         <dl>
+            <a href="#"><dt class="jl_divhu1a"><img src="images/hu1_03.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu1b"><img src="images/hu1_19.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divhu1">
+         <dl>
+            <a href="#"><dt class="jl_divhu1c">
+              <div class="jl_divhu1c1"><img src="images/hucc1_03.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1d"><img src="images/hu1_14.jpg"/></dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divhu2">
+        <dl>
+           <a href="#"><dt class="jl_divhu2a"><img src="images/hu1_05.jpg"/></dt></a>
+           <a href="#"><dt class="jl_divhu2b">              
+             <div class="jl_divhu1c1"><img src="images/hucc1_07.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_09.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>   
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_14.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>         
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_17.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>
+           </dt></a>
+        </dl>
+      </div>
+      <div class="jl_divhu3">
+         <dl>
+            <a href="#"><dt class="jl_divhu3a"><img src="images/hu1_07.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_12.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_20.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+         </dl>
+      </div>
+
+   </div> 
+
+</div>
+<!-----------------------鞋靴箱包---------------------->
+<div class="jl2_divfu1fffh">
+   <div class="jl2_divfu1_1f">
+      <dl>
+        <dt class="jl2_divfu1_1dt1">鞋靴箱包</dt>
+        <dt class="jl2_divfu1_1dt2">SHOES BAGS</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">箱包</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">女包 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">男包 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">女靴 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">女鞋 |</dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ffh">
+      <div class="jl_divhu1">
+         <dl>
+            <a href="#"><dt class="jl_divhu1a"><img src="images/hu1_03.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu1b"><img src="images/hu1_19.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divhu1">
+         <dl>
+            <a href="#"><dt class="jl_divhu1c">
+              <div class="jl_divhu1c1"><img src="images/hucc1_03.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1d"><img src="images/hu1_14.jpg"/></dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divhu2">
+        <dl>
+           <a href="#"><dt class="jl_divhu2a"><img src="images/hu1_05.jpg"/></dt></a>
+           <a href="#"><dt class="jl_divhu2b">              
+             <div class="jl_divhu1c1"><img src="images/hucc1_07.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_09.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>   
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_14.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>         
+           </dt></a>
+           <a href="#"><dt class="jl_divhu2b">
+             <div class="jl_divhu1c1"><img src="images/hucc1_17.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>
+           </dt></a>
+        </dl>
+      </div>
+      <div class="jl_divhu3">
+         <dl>
+            <a href="#"><dt class="jl_divhu3a"><img src="images/hu1_07.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_12.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_20.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+         </dl>
+      </div>
+
+   </div> 
+
+</div>
+
+
 
 <!---------------------------底部代码块---------------------->
 <table cellpadding="0" cellspacing="0" width="100%">
