--- a/2_cloth.html
+++ b/2_cloth.html
@@ -10,7 +10,11 @@
 <script type="text/javascript" src="js/2_cloth.js"></script>
 </head>
 <body>
+
 <!-----------------------精选活动---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
 <div class="jl2_divfu1">
    <div class="jl2_divfu1_1">
       <dl>
@@ -44,9 +48,14 @@
    </div>
    
 </div>
-
+  </td>
+ </tr>
+</table>
 
 <!-----------------------流行趋势---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
 <div class="jl2_divfu1f">
    <div class="jl2_divfu1_1f">
       <dl>
@@ -75,8 +84,13 @@
    <a href="#"><div class="jl_fudiv2"><img src="images/fz_24.jpg"/></div></a>
    
 </div>
-
+  </td>
+ </tr>
+</table>
 <!-----------------------精品女装---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
 <div class="jl2_divfu1ff">
    <div class="jl2_divfu1_1f">
       <dl>
@@ -103,9 +117,14 @@
       </dl>
    </div>  
 </div>
-
+  </td>
+ </tr>
+</table>
 
 <!-----------------------精品男装---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
 <div class="jl2_divfu1fff">
    <div class="jl2_divfu1_1f">
       <dl>
@@ -133,7 +152,13 @@
    </div> 
    <a href="#"><div class="jl_fudiv2"><img src="images/men2_03.jpg"/></div></a> 
 </div>
+  </td>
+ </tr>
+</table>
 <!-----------------------运动户外---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
 <div class="jl2_divfu1fffh">
    <div class="jl2_divfu1_1f">
       <dl>
@@ -210,8 +235,14 @@
    </div> 
 
 </div>
+  </td>
+ </tr>
+</table>
 <!-----------------------鞋靴箱包---------------------->
-<div class="jl2_divfu1fffh">
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
+<div class="jl2_divfu1fffhx">
    <div class="jl2_divfu1_1f">
       <dl>
         <dt class="jl2_divfu1_1dt1">鞋靴箱包</dt>
@@ -227,48 +258,48 @@
    <div class="jl2_divfu1_2ffh">
       <div class="jl_divhu1">
          <dl>
-            <a href="#"><dt class="jl_divhu1a"><img src="images/hu1_03.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
-            <a href="#"><dt class="jl_divhu1b"><img src="images/hu1_19.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu1a"><img src="images/xiangbao1_03.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu1b"><img src="images/xiangbao1_29.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
          </dl>    
       </div>
       <div class="jl_divhu1">
          <dl>
             <a href="#"><dt class="jl_divhu1c">
-              <div class="jl_divhu1c1"><img src="images/hucc1_03.jpg"/></div>
+              <div class="jl_divhu1c1"><img src="images/xiangbao1_10.jpg"/></div>
               <div class="jl_divhu1c2">
                  <p>装柜同步按法律</p>
                  <p>￥888</p>
               </div> 
             </dt></a>
-            <a href="#"><dt class="jl_divhu1d"><img src="images/hu1_14.jpg"/></dt></a>
+            <a href="#"><dt class="jl_divhu1d"><img src="images/xiangbao1_16.jpg"/></dt></a>
          </dl>    
       </div>
       <div class="jl_divhu2">
         <dl>
-           <a href="#"><dt class="jl_divhu2a"><img src="images/hu1_05.jpg"/></dt></a>
+           <a href="#"><dt class="jl_divhu2a"><img src="images/xiangbao1_05.jpg"/></dt></a>
            <a href="#"><dt class="jl_divhu2b">              
-             <div class="jl_divhu1c1"><img src="images/hucc1_07.jpg"/></div>
+             <div class="jl_divhu1c1"><img src="images/xiangbao1_18.jpg"/></div>
               <div class="jl_divhu1c2">
                  <p>装柜同步按法律</p>
                  <p>￥888</p>
               </div>
            </dt></a>
            <a href="#"><dt class="jl_divhu2b">
-             <div class="jl_divhu1c1"><img src="images/hucc1_09.jpg"/></div>
+             <div class="jl_divhu1c1"><img src="images/xiangbao1_20.jpg"/></div>
               <div class="jl_divhu1c2">
                  <p>装柜同步按法律</p>
                  <p>￥888</p>
               </div>   
            </dt></a>
            <a href="#"><dt class="jl_divhu2b">
-             <div class="jl_divhu1c1"><img src="images/hucc1_14.jpg"/></div>
+             <div class="jl_divhu1c1"><img src="images/xiangbao1_32.jpg"/></div>
               <div class="jl_divhu1c2">
                  <p>装柜同步按法律</p>
                  <p>￥888</p>
               </div>         
            </dt></a>
            <a href="#"><dt class="jl_divhu2b">
-             <div class="jl_divhu1c1"><img src="images/hucc1_17.jpg"/></div>
+             <div class="jl_divhu1c1"><img src="images/xiangbao1_20.jpg"/></div>
               <div class="jl_divhu1c2">
                  <p>装柜同步按法律</p>
                  <p>￥888</p>
@@ -278,17 +309,230 @@
       </div>
       <div class="jl_divhu3">
          <dl>
-            <a href="#"><dt class="jl_divhu3a"><img src="images/hu1_07.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
-            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_12.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
-            <a href="#"><dt class="jl_divhu3b"><img src="images/hu1_20.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3a"><img src="images/xiangbao1_07.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/xiangbao1_22.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
+            <a href="#"><dt class="jl_divhu3b"><img src="images/xiangbao1_36.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div></dt></a>
          </dl>
       </div>
 
    </div> 
-
+    <a href="#"><div class="jl_fudiv2"><img src="images/fz_24.jpg"/></div></a>
 </div>
+  </td>
+ </tr>
+</table>
+<!-----------------------珠宝配饰---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
+<div class="jl2_divfu1fffhxz">
+   <div class="jl2_divfu1_1f">
+      <dl>
+        <dt class="jl2_divfu1_1dt1">珠宝配饰</dt>
+        <dt class="jl2_divfu1_1dt2">JEWELRY ACCESSORIES</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">项链</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">手链 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">眼镜 | </dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">手表 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">饰品 |</dt></a>
+        <a href="#"><dt class="jl2_divfu1_1dt3">珠表 |</dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ffh">
+      <div class="jl_divzhubao1">
+         <dl>
+            <a href="#"><dt class="jl_divhu2a"><img src="images/zhubao1_07.jpg"/></dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_09.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_11.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_13.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divzhubao1">
+         <dl>
 
+            <a href="#"><dt class="jl_divhu1czhubao1">
+              <img src="images/zhubao1_28.jpg"/>
+<div class="jl2_divfu1_2a">韩衣都舍 3折起</div>
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao1">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_35.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu2a"><img src="images/zhubao1_22.jpg"/></dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_25.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+         </dl>    
+      </div>
+      <div class="jl_divzhubao1">
+         <dl>
 
+            <a href="#"><dt class="jl_divhu1czhubao1">
+             <img src="images/zhubao1_37.jpg"/><div class="jl2_divfu1_2a">韩衣都舍 3折起</div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao1">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_39.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+            <a href="#"><dt class="jl_divhu2a"><img src="images/zhubao1_42.jpg"/></dt></a>
+            <a href="#"><dt class="jl_divhu1czhubao">
+              <div class="jl_divhu1c1"><img src="images/zhubao1_35.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> 
+            </dt></a>
+         </dl>    
+      </div>
+
+   </div> 
+</div>
+  </td>
+ </tr>
+</table>
+<!-----------------------内衣童装---------------------->
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tr>
+  <td>
+<div class="jl2_divfu1fffhxzt">
+
+<!----------------内衣------------->
+  <div class="jl_divzui1">
+   <div>
+      <dl>
+        <dt class="jl2_divfu1_1dt1">精品内衣</dt>
+        <dt class="jl2_divfu1_1dt2">UNDERWEAR</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ffhzui">
+       <div class="jl_divzui1a">
+          <dl>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">                       
+              <div class="jl_divhu1c1"><img src="images/tn1_10.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> </dt></a>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_27.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>               
+             </dt></a>
+          </dl>      
+       </div>
+       <div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_12.jpg"/></dt></dl></div>
+       <div class="jl_divzui1a">
+          <dl>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_18.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>              
+             </dt></a>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_30.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>              
+              </dt></a>
+          </dl>      
+       </div>
+
+   </div> 
+  </div>
+  
+  
+  
+<!----------------童装------------->  
+  
+  <div class="jl_divzui1ftn">
+   <div>
+      <dl>
+        <dt class="jl2_divfu1_1dt1">精品内衣</dt>
+        <dt class="jl2_divfu1_1dt2">UNDERWEAR</dt>
+        <a href="#"><dt class="jl2_divfu1_1dt4">更多 > </dt></a>
+      </dl>
+   </div>
+   <div class="jl2_divfu1_2ffhzui">
+       <div class="jl_divzui1a">
+          <dl>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">                       
+              <div class="jl_divhu1c1"><img src="images/tn1_20.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div> </dt></a>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_33.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>               
+             </dt></a>
+          </dl>      
+       </div>
+       <div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_07.jpg"/></dt></dl></div>
+       <div class="jl_divzui1a">
+          <dl>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_15.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>              
+             </dt></a>
+             <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
+              <div class="jl_divhu1c1"><img src="images/tn1_36.jpg"/></div>
+              <div class="jl_divhu1c2">
+                 <p>装柜同步按法律</p>
+                 <p>￥888</p>
+              </div>              
+              </dt></a>
+          </dl>      
+       </div>
+
+   </div> 
+  </div>
+<a href="#"><div class="jl_fudiv2"><img src="images/fz_24.jpg"/></div></a>  
+  
+</div>
+  </td>
+ </tr>
+</table>
 
 <!---------------------------底部代码块---------------------->
 <table cellpadding="0" cellspacing="0" width="100%">
