--- a/2_cloth.html
+++ b/2_cloth.html
@@ -452,7 +452,7 @@
              </dt></a>
           </dl>      
        </div>
-       <div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_12.jpg"/></dt></dl></div>
+       <a href="#"><<div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_12.jpg"/></dt></dl></div></a>
        <div class="jl_divzui1a">
           <dl>
              <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
@@ -505,7 +505,7 @@
              </dt></a>
           </dl>      
        </div>
-       <div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_07.jpg"/></dt></dl></div>
+       <a href="#"><<div class="jl_divzui1a"><dl><dt class="jl2_divfu1_2ffhzuidt1"><img src="images/tn1_07.jpg"/></dt></dl></div></a>
        <div class="jl_divzui1a">
           <dl>
              <a href="#"><dt class="jl2_divfu1_2ffhzuidt">
