--- a/meis.html
+++ b/meis.html
@@ -1,4 +1,28 @@
-				<div class="lb_daos019">
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=EDGE"> 
+<title>¾«²ÊÉú»îÍø</title>
+<link rel="shortcut icon" href="images/shopping.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="css/index.css" />
+<link href="css/layout.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="css/jcshgsy.css" />
+
+<script type="text/javascript" src="js/jq1.7.1.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+
+<script src="js/jquery-powerSwitch.js"></script>
+
+
+<script type="text/javascript" src="js/bb.js"></script>
+
+<script type="text/javascript" src="js/js.js"></script>
+<script type="text/javascript" src="js/tlife.js"></script>
+
+</head>
+<body>
+			<div class="lb_daos019">
 					<div class="xiadao_01">
 						<table width="588px;">
 							<tr>
@@ -56,3 +80,5 @@
 						<div class="lb_ltup2"><a href=""><img src="./images/rds_25.gif" width="100%" height="100%" /></a></div>
 					</div>
 				</div>
+</body>	
+</html>				
